Removed signup API endpoint
